tests/failing/parser/tuple_literal_8max.out
tests/failing/parser/tuple_literal_8max.ri:3:9: error: tuples can have a maximum of 8 expressions
  3 |     _ = (1, 2, 3, 4, 5, 6, 7, 8, 9); // BAD
    |         ^
rivetc: error: could not compile package `tuple_literal_8max`, aborting due to previous error.